change List.of back to Arrays.asList